@startuml
hide empty members
skin rose
skinparam classAttributeIconSize 0

class GraphicsBasedGame {
    - app: CTk
    - questions_from_file: QuestionsFromJsonFileFactory
    - questions_from_server: QuestionsFromServerFactory
    - report: ReportQuestion
    - connected_to_server: boolean
    - player: Player
    - highscore: Highscore
    - menu: Menu
    - highscore_frame: CTkFrame
    - highscore_buttons_frame: CTkFrame
    - stats_frame: CTkFrame
    - question_frame: CTkFrame
    - question_buttons_frame: CTkFrame
    - current_question_idx: int
    - difficulty: int
    + __init__()
    + run(): None
    - get_total_number_of_questions(): int
    - get_question(index: int): Question
    - get_player(): None
    - next_question(): None
    - on_difficulty_selected(difficulty: String): None
    - on_play_button_pressed(): None
    - on_highscore_button_pressed(): None
    - on_highscore_back_button_pressed(): None
    - on_highscore_reset_button_pressed(): None
    - on_right_answer(): None
    - on_wrong_answer(): None
    - on_end_button_pressed(): None
    - draw_menu(): None
    - draw_highscores(new_score: int): None
    - draw_question(question: Question, last_answer_correct: bool): None

}

interface QuestionsFactory {
    + {abstract} get_total_number_of_questions(): int
    + {abstract} get_question(index: int): Question
    + {abstract} reload_questions(): None
    # json_to_question(json: dictionary, id: int): Question
}

class Question {
    - answers: Answer[]
    - difficulty: int
    - question_text: String
    - image: str
    - __init__(id: int, question_text: String, answer_texts: String[], correct_answer_text: String, difficulty: int, image: str)
    + get_question_text(): String
    + get_answers(): Answer[]
    + shuffle_answers(): None
    + get_image(): image
    + get_difficulty(): int
    + get_options(): String[]
    + __str__(): String
}

class ReportQuestion {
    - base_url: str
    - api_key: str
    - reported: int[]
    + __init__(base_url: str, api_key: str)
    + on_question_report(question: Question): None
}


QuestionsFromJsonFileFactory "1" *--> "1..n" Question: questions
QuestionsFromServerFactory "1" *--> "1..n" Question: questions
GraphicsBasedGame "1" *--> "1" ReportQuestion
ReportQuestion "1" --> "1..n" Question
GraphicsBasedGame "1" *--> "1" QuestionsFromServerFactory
GraphicsBasedGame "1" *--> "1" QuestionsFromJsonFileFactory
QuestionsFromServerFactory --|> QuestionsFactory
QuestionsFromJsonFileFactory --|> QuestionsFactory

@enduml